--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -903,7 +903,7 @@
           </div>
           <div class="summary-item loss">
             <div class="label">Perda Total</div>
-            <div class="value" id="perda-total">R$F 0,00</div>
+            <div class="value" id="perda-total">R$ 0,00</div>
           </div>
           <div class="summary-item balance">
             <div class="label">Saldo Total</div>
@@ -1374,6 +1374,12 @@
       const apostasLista = document.getElementById("apostas-lista");
       apostasLista.innerHTML = '<div class="loading">Carregando apostas...</div>';
 
+      // Cleanup existing listener if any
+      if (window.unsubscribeApostas) {
+        window.unsubscribeApostas();
+        window.unsubscribeApostas = null;
+      }
+
       let retryCount = 0;
       const maxRetries = 3;
 
@@ -1388,39 +1394,54 @@
 
           console.log(`Tentativa ${retryCount + 1} de carregar apostas para ${currentUser}`);
 
-          // Create the query with proper ordering
+          // Create the query with proper ordering and limit
           const apostasRef = query(
             collection(db, "apostas"),
             where("userEmail", "==", currentUser),
-            orderBy("timestamp", "desc")
+            orderBy("timestamp", "desc"),
+            limit(100) // Add limit to prevent loading too many documents
           );
 
-          // Set up real-time listener
-          const unsubscribe = onSnapshot(apostasRef, (snapshot) => {
-            console.log(`Received snapshot with ${snapshot.size} documents`);
-
-            if (snapshot.empty) {
-              console.log("No bets found");
-              apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada</div>';
-              return;
-            }
-
-            // Process the apostas
+          // Initial load with getDocs
+          const initialSnapshot = await getDocs(apostasRef);
+          if (initialSnapshot.empty) {
+            console.log("No bets found");
+            apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada</div>';
+          } else {
+            console.log(`Initially found ${initialSnapshot.size} bets`);
             todasApostas = [];
-            snapshot.forEach(doc => {
+            initialSnapshot.forEach(doc => {
               const data = doc.data();
-              console.log("Document data:", data);
               todasApostas.push({ id: doc.id, ...data });
             });
-
-            console.log(`Processed ${todasApostas.length} apostas`);
             atualizarInterfaceApostas();
+          }
+
+          // Set up real-time listener for updates
+          const unsubscribe = onSnapshot(apostasRef, (snapshot) => {
+            console.log(`Received snapshot update with ${snapshot.size} documents`);
+
+            if (!snapshot.empty) {
+              todasApostas = [];
+              snapshot.forEach(doc => {
+                const data = doc.data();
+                todasApostas.push({ id: doc.id, ...data });
+              });
+              console.log(`Updated with ${todasApostas.length} apostas`);
+              atualizarInterfaceApostas();
+            }
           }, (error) => {
             console.error("Error in real-time listener:", error);
-            apostasLista.innerHTML = `<div style="text-align: center; padding: 15px; color: #888;">
-              Erro ao carregar apostas: ${error.message}
-              <button onclick="carregarApostas()">Tentar novamente</button>
-            </div>`;
+            if (!apostasLista.querySelector('.error-message')) {
+              const errorDiv = document.createElement('div');
+              errorDiv.className = 'error-message';
+              errorDiv.innerHTML = `
+                <div style="text-align: center; padding: 15px; color: #888;">
+                  Erro ao atualizar apostas: ${error.message}
+                  <button onclick="carregarApostas()">Tentar novamente</button>
+                </div>`;
+              apostasLista.appendChild(errorDiv);
+            }
           });
 
           // Store unsubscribe function for cleanup
