--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -1369,59 +1369,109 @@
       criarGrafico(7);
     }
 
+    // Replace the tryLoadApostas function with this improved version
     async function carregarApostas() {
       const apostasLista = document.getElementById("apostas-lista");
       apostasLista.innerHTML = '<div class="loading">Carregando apostas...</div>';
 
-      try {
-        // Verificar se o usuário está logado
-        if (!currentUser) {
-          console.error("Usuário não está logado.");
-          apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Por favor, faça login novamente.</div>';
-          window.location.replace('index.html');
-          return;
-        }
+      // Cleanup existing listener if any
+      if (window.unsubscribeApostas) {
+        window.unsubscribeApostas();
+        window.unsubscribeApostas = null;
+      }
 
-        // Criar a query para buscar as apostas do usuário atual
-        const apostasRef = query(
-          collection(db, "apostas"),
-          where("userEmail", "==", currentUser),
-          orderBy("timestamp", "desc")
-        );
+      let retryCount = 0;
+      const maxRetries = 3;
 
-        // Configurar o listener em tempo real com onSnapshot
-        const unsubscribe = onSnapshot(apostasRef, (snapshot) => {
-          todasApostas = []; // Limpar o array de apostas
-
-          if (snapshot.empty) {
-            apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada.</div>';
+      const tryLoad = async () => {
+        try {
+          if (!currentUser) {
+            console.error("User is not logged in");
+            apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Por favor, faça login novamente</div>';
+            window.location.replace('index.html');
             return;
           }
 
-          // Processar cada documento retornado
-          snapshot.forEach((doc) => {
-            const aposta = { id: doc.id, ...doc.data() };
-            todasApostas.push(aposta);
+          // Clear existing data
+          todasApostas = [];
+
+          console.log(`Tentativa ${retryCount + 1} de carregar apostas para ${currentUser}`);
+
+          // Create the query with proper ordering and limit
+          const apostasRef = query(
+            collection(db, "apostas"),
+            where("userEmail", "==", currentUser),
+            orderBy("timestamp", "desc"),
+            limit(100) // Add limit to prevent loading too many documents
+          );
+
+          // Set up real-time listener
+          window.unsubscribeApostas = onSnapshot(apostasRef, (snapshot) => {
+            console.log(`Received snapshot with ${snapshot.size} bets`);
+            todasApostas = [];
+            snapshot.forEach(doc => {
+              const data = doc.data();
+              todasApostas.push({ id: doc.id, ...data });
+            });
+            console.log('Updating interface with new bets:', todasApostas);
+            atualizarInterfaceApostas();
+          }, (error) => {
+            console.error('Error in real-time listener:', error);
+            apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Erro ao carregar apostas. Tente novamente.</div>';
           });
 
-          // Atualizar a interface com as apostas carregadas
-          atualizarInterfaceApostas();
-        }, (error) => {
-          console.error("Erro ao carregar apostas:", error);
-          apostasLista.innerHTML = `<div style="text-align: center; padding: 15px; color: #888;">
-        Erro ao carregar apostas: ${error.message}. <button onclick="carregarApostas()">Tentar novamente</button>
-      </div>`;
-        });
+          // Initial state for empty collection
+          if (todasApostas.length === 0) {
+            apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada</div>';
+          }
 
-        // Armazenar a função de unsubscribe para limpeza
-        window.unsubscribeApostas = unsubscribe;
+          // Set up real-time listener for updates
+          const unsubscribe = onSnapshot(apostasRef, (snapshot) => {
+            console.log(`Received snapshot update with ${snapshot.size} documents`);
 
-      } catch (error) {
-        console.error("Erro ao carregar apostas:", error);
-        apostasLista.innerHTML = `<div style="text-align: center; padding: 15px; color: #888;">
-      Erro ao carregar apostas: ${error.message}. <button onclick="carregarApostas()">Tentar novamente</button>
-    </div>`;
-      }
+            if (!snapshot.empty) {
+              todasApostas = [];
+              snapshot.forEach(doc => {
+                const data = doc.data();
+                todasApostas.push({ id: doc.id, ...data });
+              });
+              console.log(`Updated with ${todasApostas.length} apostas`);
+              atualizarInterfaceApostas();
+            }
+          }, (error) => {
+            console.error("Error in real-time listener:", error);
+            if (!apostasLista.querySelector('.error-message')) {
+              const errorDiv = document.createElement('div');
+              errorDiv.className = 'error-message';
+              errorDiv.innerHTML = `
+                <div style="text-align: center; padding: 15px; color: #888;">
+                  Erro ao atualizar apostas: ${error.message}
+                  <button onclick="carregarApostas()">Tentar novamente</button>
+                </div>`;
+              apostasLista.appendChild(errorDiv);
+            }
+          });
+
+          // Store unsubscribe function for cleanup
+          window.unsubscribeApostas = unsubscribe;
+
+        } catch (error) {
+          console.error("Erro ao configurar listener:", error);
+          if (retryCount < maxRetries) {
+            retryCount++;
+            console.log(`Tentando novamente em ${1000 * retryCount}ms...`);
+            setTimeout(tryLoad, 1000 * retryCount);
+          } else {
+            apostasLista.innerHTML = `<div style="text-align: center; padding: 15px; color: #888;">
+              Erro ao carregar apostas: ${error.message}
+              <button onclick="carregarApostas()">Tentar novamente</button>
+            </div>`;
+          }
+        }
+      };
+
+      // Start the loading process
+      await tryLoad();
     }
 
     function getStatusText(resultado) {
