--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -1783,6 +1784,8 @@
               
               // Carregar apostas diretamente com getDocs em vez de onSnapshot
               const apostasRef = query(
+                collection(db, "apostas"),
+                where("userEmail", "==", currentUser),
                 orderBy("timestamp", "desc")
               );
               
