--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -1451,15 +1451,9 @@
       const graficoDiv = document.getElementById("grafico");
       graficoDiv.innerHTML = "";
 
-      // Criar container para controlar o tamanho do gráfico
-      const containerDiv = document.createElement("div");
-      containerDiv.style.width = "100%";
-      containerDiv.style.height = "400px"; // Define uma altura fixa
-
       // Criar canvas para o Chart.js
       const ctx = document.createElement("canvas");
-      containerDiv.appendChild(ctx);
-      graficoDiv.appendChild(containerDiv);
+      graficoDiv.appendChild(ctx);
 
       // Definir período
       let startDate, endDate;
@@ -1555,7 +1549,7 @@
         chart.destroy();
       }
 
-      // Modificar as options do gráfico
+      // Criar gráfico
       chart = new Chart(ctx, {
         type: "line",
         data: {
@@ -1566,10 +1560,10 @@
               data: dados,
               borderColor: "rgb(0, 255, 100)",
               backgroundColor: gradient,
-              borderWidth: 2, // Reduzido de 3
+              borderWidth: 3,
               pointBackgroundColor: "#03dac6",
-              pointRadius: 4, // Reduzido de 5
-              pointHoverRadius: 6, // Reduzido de 7
+              pointRadius: 5,
+              pointHoverRadius: 7,
               tension: 0.4,
               fill: true,
             },
@@ -1578,7 +1572,7 @@
         options: {
           responsive: true,
           maintainAspectRatio: true,
-          aspectRatio: 2, // Reduzido de 2 para tornar o gráfico menos largo
+          aspectRatio: 2,
           animation: {
             duration: 1000,
             easing: 'easeInOutQuart',
@@ -1620,42 +1614,33 @@
                 color: "#e0e0e0",
                 padding: 10,
                 font: {
-                  size: 11 // Reduzido de 12
+                  size: 12
                 },
                 callback: function (value) {
                   return formatarMoeda(value);
                 },
                 stepSize: 5, // Define o intervalo de 5 em 5 reais
               },
-              // Defina um suggestedMin e suggestedMax para controlar o range do eixo Y
-              suggestedMin: function () {
-                const min = Math.min(...dados);
-                return Math.floor(min / 5) * 5; // Arredonda para múltiplo de 5 abaixo
-              }(),
-              suggestedMax: function () {
-                const max = Math.max(...dados);
-                return Math.ceil(max / 5) * 5; // Arredonda para múltiplo de 5 acima
-              }(),
             },
-            x: {
-              grid: {
-                display: false
-              },
-              ticks: {
-                color: "#e0e0e0",
-                padding: 8,
-                font: {
-                  size: 11 // Reduzido de 12
-                },
-                maxRotation: 45,
-                minRotation: 45,
-                maxTicksLimit: 7 // Limita o número de datas exibidas
-              },
+          },
+        },
+        x: {
+          grid: {
+            display: false
+          },
+          ticks: {
+            color: "#e0e0e0",
+            padding: 8,
+            font: {
+              size: 12
             },
+            maxRotation: 45,
+            minRotation: 45
           },
         },
       });
     }
+
     // Função para mapear liga da API para o select
     function mapearLiga(ligaNome) {
       // Primeiro verificar H2H para não conflitar com Battle 8 min normal
